# mastermind

./: LICENSE  README.md
.github/workflows/: build.yml
lib/: Mastermind.hpp  Mastermind.vcxproj  Mastermind.vcxproj.filters
mastermind/: CMakeLists.txt  canonical.cpp  canonical.hpp  codebreaker.cpp  codebreaker.hpp  codemaker.cpp  codemaker.hpp  codeword.cc  codeword.hpp  feedback.hpp  heuristicbreaker.cpp  main.cpp  rules.hpp  tracker.cc  tracker.hpp
src/: mmserve.cpp  mmserve.vcxproj  mmserve.vcxproj.filters  mmstrat.cpp  mmstrat.vcxproj  mmstrat.vcxproj.filters
